ArraySet tests refactored