@@ -9,10 +9,14 @@ import org.junit.Test;
 import org.junit.runners.MethodSorters;
 
 import java.util.*;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
+import java.util.stream.StreamSupport;
 
 import static net.java.quickcheck.generator.CombinedGenerators.excludeValues;
 import static net.java.quickcheck.generator.CombinedGenerators.lists;
-import static net.java.quickcheck.generator.CombinedGeneratorsIterables.*;
+import static net.java.quickcheck.generator.CombinedGeneratorsIterables.someOneOf;
+import static net.java.quickcheck.generator.CombinedGeneratorsIterables.somePairs;
 import static net.java.quickcheck.generator.PrimitiveGenerators.fixedValues;
 import static net.java.quickcheck.generator.PrimitiveGenerators.integers;
 
@@ -45,123 +49,83 @@ public class SortedSetTest extends BaseTest {
 
     @Test
     public void test04_externalOrder() {
-        for (final Pair<NamedComparator, List<Integer>> pair : withComparator()) {
-            final List<Integer> elements = pair.getSecond();
-            final Comparator<Integer> comparator = pair.getFirst();
-
-            assertEq(
-                    set(elements, comparator),
-                    treeSet(elements, comparator),
-                    "(comparator = " + comparator + ", elements = " + elements + ")"
-            );
-        }
-    }
-
-    protected Iterable<Pair<NamedComparator, List<Integer>>> withComparator() {
-        return somePairs(comparators, lists(integers()));
+        test((elements, comparator, treeSet, set, context) -> assertEq(treeSet, set, context));
     }
 
     @Test
     public void test07_contains() {
-        for (final Pair<NamedComparator, List<Integer>> pair : withComparator()) {
-            final List<Integer> elements = pair.getSecond();
-            final Comparator<Integer> comparator = pair.getFirst();
-
-            final SortedSet<Integer> set = set(elements, comparator);
-            final String context = "(comparator = " + comparator + ", elements = " + elements + ")";
+        test((elements, comparator, treeSet, set, context) -> {
             for (final Integer element : elements) {
                 Assert.assertTrue("set should contains() element " + element + " " + context, set.contains(element));
             }
 
-            final SortedSet<Integer> treeSet = treeSet(elements, comparator);
             for (final Integer element : someOneOf(excludeValues(integers(), elements))) {
                 Assert.assertEquals("contains(" + element + ") " + context, treeSet.contains(element), set.contains(element));
             }
-        }
+        });
     }
 
     @Test
     public void test09_containsAll() {
-        for (final Pair<NamedComparator, List<Integer>> pair : withComparator()) {
-            final List<Integer> elements = pair.getSecond();
-            final Comparator<Integer> comparator = pair.getFirst();
-
-            final SortedSet<Integer> set = set(elements, comparator);
-            final String context = "(comparator = " + comparator + ", elements = " + elements + ")";
+        test((elements, comparator, treeSet, set, context) -> {
             Assert.assertTrue("set should contains() all elements " + " " + context, set.containsAll(elements));
 
-            final SortedSet<Integer> treeSet = treeSet(elements, comparator);
             for (final Integer element : someOneOf(excludeValues(integers(), elements))) {
                 final List<Integer> l = new ArrayList<>(elements);
                 elements.add(element);
                 Assert.assertEquals("containsAll(" + l + ") " + context, treeSet.containsAll(l), set.containsAll(l));
             }
-        }
+        });
     }
 
-    private List<Integer> toList(final SortedSet<Integer> set) {
+    private static List<Integer> toList(final SortedSet<Integer> set) {
         return new ArrayList<>(set);
     }
 
-    protected List<Number> toArray(final SortedSet<Integer> set) {
-        return Arrays.asList(set.toArray(new Number[0]));
+    protected static List<Number> toArray(final SortedSet<Integer> set) {
+        return List.of(set.toArray(new Number[0]));
     }
 
-    private TreeSet<Integer> treeSet(final List<Integer> elements) {
-        return new TreeSet<>(elements);
+    protected static void assertEq(final SortedSet<Integer> expected, final SortedSet<Integer> actual, final String context) {
+        Assert.assertEquals("invalid element order " + context, toList(expected), toList(actual));
+        Assert.assertEquals("invalid toArray " + context, toArray(actual), toArray(actual));
+        Assert.assertEquals("invalid set size " + context, expected.size(), (Object) actual.size());
+        Assert.assertEquals("invalid isEmpty " + context, expected.isEmpty(), actual.isEmpty());
+        Assert.assertSame("invalid comparator " + context, expected.comparator(), actual.comparator());
     }
 
-    private SortedSet<Integer> set(final List<Integer> elements) {
-        return create(new Object[]{elements}, Collection.class);
-    }
-
-    protected SortedSet<Integer> set(final List<Integer> elements, final Comparator<Integer> comparator) {
-        return create(new Object[]{elements, comparator}, Collection.class, Comparator.class);
-    }
-
-    protected void assertEq(final SortedSet<Integer> set, final SortedSet<Integer> treeSet, final String context) {
-        Assert.assertEquals("invalid element order " + context, toList(treeSet), toList(set));
-        Assert.assertEquals("invalid toArray " + context, toArray(set), toArray(set));
-        Assert.assertEquals("invalid set size " + context, treeSet.size(), (Object) set.size());
-        Assert.assertEquals("invalid isEmpty " + context, treeSet.isEmpty(), set.isEmpty());
-        Assert.assertSame("invalid comparator " + context, treeSet.comparator(), set.comparator());
-    }
-
-    protected SortedSet<Integer> treeSet(final List<Integer> elements, final Comparator<Integer> comparator) {
-        final SortedSet<Integer> set = new TreeSet<>(comparator);
+    protected static <T, S extends SortedSet<T>> S treeSet(final List<T> elements, final Comparator<T> comparator) {
+        @SuppressWarnings("unchecked") final S set = (S) new TreeSet<>(comparator);
         set.addAll(elements);
         return set;
     }
-    
-    protected final class NamedComparator implements Comparator<Integer> {
-        private final String name;
-        private final Comparator<Integer> comparator;
 
-        private NamedComparator(final String name, final Comparator<Integer> comparator) {
-            this.name = name;
-            this.comparator = comparator;
-        }
-
-        @Override
-        public int compare(final Integer o1, final Integer o2) {
-            return comparator.compare(o1, o2);
-        }
-
-        @Override
-        public String toString() {
-            return name;
-        }
+    @SuppressWarnings("unchecked")
+    protected static <T, S extends SortedSet<T>> S set(final List<T> elements, final Comparator<T> comparator) {
+        return (S) create(new Object[]{elements, comparator}, Collection.class, Comparator.class);
     }
 
-    private final Generator<NamedComparator> comparators = fixedValues(Arrays.asList(
+    protected static final Generator<NamedComparator> NAMED_COMPARATORS = fixedValues(
             new NamedComparator("Natural order", Integer::compare),
             new NamedComparator("Reverse order", Comparator.comparingInt(Integer::intValue).reversed()),
             new NamedComparator("Div 100", Comparator.comparingInt(i -> i / 100)),
             new NamedComparator("Even first", Comparator.<Integer>comparingInt(i -> i % 2).thenComparing(Integer::intValue)),
             new NamedComparator("All equal", Comparator.comparingInt(i -> 0))
-    ));
+    );
 
-    private SortedSet<Integer> create(final Object[] params, final Class<?>... types) {
+    protected interface TestCase<T, S extends SortedSet<T>> {
+        void test(List<T> elements, Comparator<T> comparator, S model, S tested, String context);
+    }
+
+    protected static <S extends SortedSet<Integer>> void test(final TestCase<Integer, S> testCase) {
+        somePairs(NAMED_COMPARATORS, lists(integers())).forEach(e -> {
+            final List<Integer> elements = e.getSecond();
+            final NamedComparator comparator = e.getFirst();
+            testCase.test(elements, comparator, treeSet(elements, comparator), set(elements, comparator), "(comparator = " + comparator + ", elements = " + elements + ")");
+        });
+    }
+
+    private static SortedSet<Integer> create(final Object[] params, final Class<?>... types) {
         try {
             @SuppressWarnings("unchecked") final
             SortedSet<Integer> set = (SortedSet<Integer>) loadClass().getConstructor(types).newInstance(params);
@@ -175,90 +139,65 @@ public class SortedSetTest extends BaseTest {
 
     @Test
     public void test11_comparator() {
-        for (final Pair<NamedComparator, List<Integer>> pair : withComparator()) {
-            final List<Integer> elements = pair.getSecond();
-            final Comparator<Integer> comparator = pair.getFirst();
-
-            Assert.assertSame("comparator() should return provided comparator", comparator, set(elements, comparator).comparator());
-        }
-        for (final List<Integer> elements : someLists(integers())) {
-            Assert.assertNull("comparator() should return null for default order", set(elements).comparator());
-        }
+        test((elements, comparator, treeSet, set, context) ->
+                Assert.assertSame("comparator() should return provided comparator", comparator, set.comparator()));
     }
 
     @Test
     public void test12_headSet() {
-        for (final Pair<NamedComparator, List<Integer>> pair : withComparator()) {
-            final List<Integer> elements = pair.getSecond();
-            final Comparator<Integer> comparator = pair.getFirst();
-            final SortedSet<Integer> set = set(elements, comparator);
-            final SortedSet<Integer> treeSet = treeSet(elements, comparator);
-
+        test((elements, comparator, treeSet, set, context) -> {
             for (final Integer element : inAndOut(elements)) {
-                assertEq(
-                        set.headSet(element),
-                        treeSet.headSet(element),
-                        "in headSet(" + element + ") (comparator = " + comparator + ", elements = " + elements + ")"
-                );
+                assertEq(treeSet.headSet(element), set.headSet(element), "in headSet(" + element + ") " + context);
             }
-        }
+        });
     }
 
-    protected Collection<Integer> inAndOut(final List<Integer> elements) {
+    protected static Collection<Integer> inAndOut(final List<Integer> elements) {
         return concat(elements, someOneOf(excludeValues(integers(), elements)));
     }
 
-    private Collection<Integer> concat(final Iterable<Integer> items1, final Iterable<Integer> items2) {
-        final List<Integer> list = new ArrayList<>();
-        items1.forEach(list::add);
-        items2.forEach(list::add);
-        return list;
+    private static <T> Collection<T> concat(final Iterable<? extends T> items1, final Iterable<? extends T> items2) {
+        return Stream.concat(stream(items1), stream(items2)).collect(Collectors.toList());
+    }
+
+    private static <T> Stream<T> stream(final Iterable<T> items1) {
+        return StreamSupport.stream(items1.spliterator(), false);
     }
 
     @Test
     public void test14_subSet() {
-        for (final Pair<NamedComparator, List<Integer>> pair : withComparator()) {
-            final List<Integer> elements = pair.getSecond();
-            final Comparator<Integer> comparator = pair.getFirst();
-            final SortedSet<Integer> set = set(elements, comparator);
-            final SortedSet<Integer> treeSet = treeSet(elements, comparator);
-
+        test((elements, comparator, treeSet, set, context) -> {
             final Collection<Integer> all = values(elements);
             for (final Pair<Integer, Integer> p : somePairs(fixedValues(all), fixedValues(all))) {
                 final Integer from = p.getFirst();
                 final Integer to = p.getSecond();
                 if (comparator.compare(from, to) <= 0) {
                     assertEq(
-                            set.subSet(from, to),
-                            treeSet.subSet(from, to),
-                            "in subSet(" + from + ", " + to + ") (comparator = " + comparator + ", elements = " + elements + ")"
+                            treeSet.subSet(from, to), set.subSet(from, to),
+                            "in subSet(" + from + ", " + to + ") " + context
                     );
                 }
             }
-        }
+        });
     }
 
-    protected Collection<Integer> values(final List<Integer> elements) {
-        return concat(inAndOut(elements), Arrays.asList(0, Integer.MAX_VALUE, Integer.MIN_VALUE));
+    protected static Collection<Integer> values(final List<Integer> elements) {
+        return concat(inAndOut(elements), List.of(0, Integer.MAX_VALUE, Integer.MIN_VALUE));
     }
 
     @Test
     public void test16_first() {
-        for (final Pair<NamedComparator, List<Integer>> pair : withComparator()) {
-            final List<Integer> elements = pair.getSecond();
-            final Comparator<Integer> comparator = pair.getFirst();
-
-            final SortedSet<Integer> set = set(elements, comparator);
-            if (set.isEmpty()) {
+        test((elements, comparator, treeSet, set, context) -> {
+            if (elements.isEmpty()) {
                 try {
                     set.first();
-                    Assert.fail("first() should throw NoSuchElementException for empty set");
+                    Assert.fail("first" + "() should throw NoSuchElementException for empty set");
                 } catch (final NoSuchElementException e) {
-                    // Expected behavior
+                    // ok
                 }
             } else {
-                Assert.assertEquals("first() " + "(comparator = " + comparator + ", elements = " + elements + ")", set(elements, comparator).first(), set.first());
+                Assert.assertEquals("first" + "() (comparator = " + comparator + ", elements = " + elements + ")", treeSet.first(), treeSet.first());
             }
-        }
+        });
     }
 }
